hphp/hack/test/typecheck/open_tuples/tuple_open_is_as_test_bad.php.exp
WARN: File "tuple_open_is_as_test_bad.php", line 6, characters 7-34:
This `is` check is always `false`. The expression on the left has type `(nonnull...)` which shares no values with `(int, optional string)`. (Warn[12010])
WARN: File "tuple_open_is_as_test_bad.php", line 9, characters 7-28:
This `is` check is always `false`. The expression on the left has type `(nonnull...)` which shares no values with `(int, string...)`. (Warn[12010])
ERROR: File "tuple_open_is_as_test_bad.php", line 5, characters 9-20:
Invalid `as` expression hint (Typing[4195])
  File "tuple_open_is_as_test_bad.php", line 5, characters 9-20:
  The `as` operator cannot be used with a tuple type with optional or variadic elements
ERROR: File "tuple_open_is_as_test_bad.php", line 6, characters 13-34:
Invalid `is` expression hint (Typing[4195])
  File "tuple_open_is_as_test_bad.php", line 6, characters 13-34:
  The `is` operator cannot be used with a tuple type with optional or variadic elements
ERROR: File "tuple_open_is_as_test_bad.php", line 9, characters 13-28:
Invalid `is` expression hint (Typing[4195])
  File "tuple_open_is_as_test_bad.php", line 9, characters 13-28:
  The `is` operator cannot be used with a tuple type with optional or variadic elements
ERROR: File "tuple_open_is_as_test_bad.php", line 12, characters 9-37:
Invalid `as` expression hint (Typing[4195])
  File "tuple_open_is_as_test_bad.php", line 12, characters 9-37:
  The `as` operator cannot be used with a tuple type with optional or variadic elements
